printlist/printlist_Deployment_printlist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: printlist
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: printlist
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: printlist
    spec:
      containers:
      - image: ghcr.io/ocf/printlist:bfd8699246ae0d7905e0478e092ba7790b6eefb3
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /usr/src/app/conf
          name: secrets
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - name: secrets
        secret:
          secretName: printlist
