printlist/printlist_Service_printlist.yaml
apiVersion: v1
kind: Service
metadata:
  name: printlist
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    transpire.ocf.io/deployment: printlist
