printlist/printlist_Ingress_printlist.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: printlist
spec:
  ingressClassName: cilium
  rules:
  - host: printlist.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: printlist
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - printlist.ocf.berkeley.edu
    secretName: printlist-tls
